# acow_cpp_goodies

./: CMakeLists.txt
acow/: cpp_goodies.h
acow/include/: Assert.h  BitwiseUtils.h  CPP_Version.h  CompilerMacros.h  Constexpr.h  Debugger.h  Deprecated.h  Disallow.h  FakeKeywords.h  Memory.h  OSMacros.h  ProcessorMacros.h  RawPointers.h  Singleton.h  SmartPointer.h  Version.h
acow/include/Pointers/: SmartPointer.h  observer_ptr.h
acow/include/private/: BitwiseUtils.h
acow/src/: Debugger.cpp
acow/src/private/: BitwiseUtils.cpp
scripts/: dependencies.lua
